# TomsksoftProject

./: CMakeLists.txt  README.md  aboutwindow.cpp  aboutwindow.h  calendarwidget.cpp  calendarwidget.h  database.cpp  database.h  daywidget.cpp  daywidget.h  dbfasade.cpp  dbfasade.h  dbsingleton.cpp  dbsingleton.h  editform.cpp  editform.h  instructionwindow.cpp  instructionwindow.h  loginwindow.cpp  loginwindow.h  main.cpp  mainwindow.cpp  mainwindow.h  modalmainwindow.cpp  modalmainwindow.h  registrationwindow.cpp  registrationwindow.h  res.qrc
